streamlined the code and removed old comments

--- a/docs/notebooks/internal/pfjax_ext.ipynb
+++ b/docs/notebooks/internal/pfjax_ext.ipynb
@@ -58,12 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1a4fff96",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T16:08:25.054921Z",
-     "start_time": "2022-12-09T16:08:24.125367Z"
+     "end_time": "2022-12-09T16:12:06.415722Z",
+     "start_time": "2022-12-09T16:12:05.614132Z"
     }
    },
    "outputs": [],
@@ -138,12 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2d6688ad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T16:08:27.511856Z",
-     "start_time": "2022-12-09T16:08:27.491139Z"
+     "end_time": "2022-12-09T16:12:08.837638Z",
+     "start_time": "2022-12-09T16:12:08.816418Z"
     }
    },
    "outputs": [],
@@ -238,22 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bf98bdc2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T16:08:30.864233Z",
-     "start_time": "2022-12-09T16:08:30.370228Z"
+     "end_time": "2022-12-09T16:12:12.444615Z",
+     "start_time": "2022-12-09T16:12:11.992743Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x137424be0>"
+       "<seaborn.axisgrid.FacetGrid at 0x142d89c30>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,12 +321,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3c6c0d91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T16:08:43.030779Z",
-     "start_time": "2022-12-09T16:08:34.061219Z"
+     "end_time": "2022-12-09T16:12:41.959710Z",
+     "start_time": "2022-12-09T16:12:32.893409Z"
     }
    },
    "outputs": [
@@ -334,8 +334,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "637 ms ± 3.64 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "972 µs ± 2.76 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "641 ms ± 3.84 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "980 µs ± 14.6 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     },
     {
@@ -528,12 +528,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "09efd41a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T16:08:46.899617Z",
-     "start_time": "2022-12-09T16:08:46.873896Z"
+     "end_time": "2022-12-09T16:12:46.636088Z",
+     "start_time": "2022-12-09T16:12:46.613812Z"
     }
    },
    "outputs": [],
@@ -550,14 +550,11 @@
     "        \"\"\"\n",
     "        super().__init__(bootstrap=False)  # Sets up a non-bootstrap filter\n",
     "        self._dt = dt\n",
-    "#         self._err = err\n",
     "        \n",
     "    def init_lpdf(self, x_init, y_init, theta):\n",
     "        \"\"\"\n",
     "        Calculate the log-density of the initial proposal for the state variable at time `t=0`.\n",
     "        \"\"\"\n",
-    "#         scale = theta[1] * jnp.sqrt(self._dt)\n",
-    "#         return jnp.log(jsp.stats.norm.pdf(x_init, loc=0.0, scale=scale) + self._err)\n",
     "        A = 1/(2.0 * theta[2] * theta[2]) + 1/(2.0 * theta[1] * theta[1] * self._dt)\n",
     "        B = y_init / (theta[2] * theta[2])\n",
     "        return jsp.stats.norm.logpdf(x_init, loc=B/(2.0*A), scale=jnp.sqrt(1/(2.0 * A)))\n",
@@ -566,27 +563,17 @@
     "        \"\"\"\n",
     "        Sample one draw state variable from the initial proposal distribution at time `t=0`.\n",
     "        \"\"\"\n",
-    "#         scale = theta[1] * jnp.sqrt(self._dt)\n",
     "        A = 1/(2.0 * theta[2] * theta[2]) + 1/(2.0 * theta[1] * theta[1] * self._dt)\n",
     "        B = y_init / (theta[2] * theta[2])\n",
-    "#         return scale * jax.random.normal(key=key) + self._err * jax.random.normal(key=2*key)\n",
-    "        return B/(2.0 * A) + jnp.sqrt(1/(2.0 * A)) * jax.random.normal(key=key) #+ self._err * jax.random.normal(key=2*key)\n",
+    "        return B/(2.0 * A) + jnp.sqrt(1/(2.0 * A)) * jax.random.normal(key=key)\n",
     "    \n",
     "    def step_lpdf(self, x_curr, x_prev, y_curr, theta):\n",
     "        \"\"\"\n",
     "        Calculate log-density of the proposal distribution\n",
     "        \"\"\"\n",
-    "#         loc_prev = x_prev + theta[0] * self._dt\n",
-    "#         scale = theta[1] * jnp.sqrt(self._dt)\n",
-    "#         lpdf_ans = jsp.stats.norm.logpdf(x_curr, loc = loc_prev, scale = scale)\n",
-    "#         lpdf_ans += jsp.stats.norm.logpdf(y_curr, loc = x_curr, scale = theta[2])\n",
-    "#         sigma2_tilde = theta[1] * theta[1] * self._dt\n",
-    "#         tau2 = theta[2] * theta[2]\n",
-    "#         lpdf_ans -= jsp.stats.norm.logpdf(y_curr, loc = loc_prev, scale = jnp.sqrt(sigma2_tilde + tau2))\n",
     "        A = 1/(2.0 * theta[2] * theta[2]) + 1/(2.0 * theta[1] * theta[1] * self._dt)\n",
     "        B = y_curr / (theta[2] * theta[2]) + (x_prev + theta[0] * self._dt) / (theta[1] * theta[1] * self._dt)\n",
     "        lpdf_ans = jsp.stats.norm.logpdf(x_curr, loc = B/(2.0 * A), scale = jnp.sqrt(1/(2.0 * A)))\n",
-    "#         return jnp.log(jnp.exp(lpdf_ans) + self._err) # self._err only adds constant to the logpdf\n",
     "        return lpdf_ans\n",
     "    \n",
     "    def step_sample(self, key, x_prev, y_curr, theta):\n",
@@ -595,7 +582,7 @@
     "        \"\"\"\n",
     "        A = 1/(2.0 * theta[2] * theta[2]) + 1/(2.0 * theta[1] * theta[1] * self._dt)\n",
     "        B = y_curr / (theta[2] * theta[2]) + (x_prev + theta[0] * self._dt) / (theta[1] * theta[1] * self._dt)\n",
-    "        return B/(2.0 * A) + jnp.sqrt(1/(2.0 * A)) * jax.random.normal(key = key) #+ self._err * jax.random.normal(key=2*key)\n",
+    "        return B/(2.0 * A) + jnp.sqrt(1/(2.0 * A)) * jax.random.normal(key = key)\n",
     "\n",
     "    def prior_lpdf(self, x_init, theta):\n",
     "        \"\"\"\n",
@@ -603,13 +590,6 @@
     "        \"\"\"\n",
     "        scale = theta[1] * jnp.sqrt(self._dt)\n",
     "        return jsp.stats.norm.logpdf(x_init, loc=0.0, scale=scale)\n",
-    "\n",
-    "#     def prior_sample(self, key, theta):\n",
-    "#         \"\"\"\n",
-    "#         Sample one draw from the initial state variable at time `t=0`.\n",
-    "#         \"\"\"\n",
-    "#         scale = theta[1] * jnp.sqrt(self._dt)\n",
-    "#         return scale * jax.random.normal(key=key)\n",
     "\n",
     "    def state_lpdf(self, x_curr, x_prev, theta):\n",
     "        \"\"\"\n",
@@ -619,48 +599,13 @@
     "        scale = theta[1] * jnp.sqrt(self._dt)\n",
     "        return jsp.stats.norm.logpdf(x_curr, loc=loc, scale=scale)\n",
     "\n",
-    "#     def state_sample(self, key, x_prev, theta):\n",
-    "#         \"\"\"\n",
-    "#         Sample one draw from the current state variable at time `t` given the previous state variable at time `t-1`.\n",
-    "#         \"\"\"\n",
-    "#         loc = x_prev + theta[0] * self._dt\n",
-    "#         scale = theta[1] * jnp.sqrt(self._dt)\n",
-    "#         return loc + scale * jax.random.normal(key=key)\n",
-    "\n",
     "    def meas_lpdf(self, y_curr, x_curr, theta):\n",
     "        \"\"\"\n",
     "        Calculate the log-density of the current measurement variable at time `t` given the current state variable at time `t`.\n",
     "        \"\"\"\n",
     "        loc = x_curr\n",
     "        scale = theta[2]\n",
-    "        return jsp.stats.norm.logpdf(y_curr, loc=loc, scale=scale)\n",
-    "\n",
-    "#     def meas_sample(self, key, x_curr, theta):\n",
-    "#         \"\"\"\n",
-    "#         Sample one draw from the current measurement variable at time `t` given the current state variable at time `t`.\n",
-    "#         \"\"\"\n",
-    "#         loc = x_curr\n",
-    "#         scale = theta[2]\n",
-    "#         return loc + scale * jax.random.normal(key=key)\n",
-    "\n",
-    "#     def exact_lpdf(self, y_meas, theta):\n",
-    "#         \"\"\"\n",
-    "#         Calculate exact log-density of measurement variables at times `t=0:T`.\n",
-    "#         \"\"\"\n",
-    "#         mu_tilde = theta[0] * self._dt\n",
-    "#         sigma2_tilde = theta[1] * theta[1] * self._dt\n",
-    "#         tau2 = theta[2] * theta[2]\n",
-    "#         n_obs = y_meas.shape[0]  # number of observations\n",
-    "#         t_meas = jnp.arange(n_obs)\n",
-    "#         mu_y = mu_tilde * t_meas  # mean of y_meas\n",
-    "#         # variance of y_meas\n",
-    "#         Sigma_y = sigma2_tilde * \\\n",
-    "#             jax.vmap(lambda t: jnp.minimum(t, t_meas))(t_meas)\n",
-    "#         Sigma_y = Sigma_y + sigma2_tilde\n",
-    "#         Sigma_y = Sigma_y + tau2 * jnp.eye(n_obs)\n",
-    "#         return jsp.stats.multivariate_normal.logpdf(\n",
-    "#             x=y_meas, mean=mu_y, cov=Sigma_y\n",
-    "#         )"
+    "        return jsp.stats.norm.logpdf(y_curr, loc=loc, scale=scale)"
    ]
   },
   {
@@ -685,12 +630,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "561d84f5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T16:08:57.149323Z",
-     "start_time": "2022-12-09T16:08:57.131538Z"
+     "end_time": "2022-12-09T16:13:18.268980Z",
+     "start_time": "2022-12-09T16:13:18.251890Z"
     }
    },
    "outputs": [],
@@ -706,25 +651,6 @@
     "        \"\"\"\n",
     "        super().__init__(bootstrap=False)  # Sets up a non-bootstrap filter\n",
     "        self._dt = dt\n",
-    "    \n",
-    "#     def exact_lpdf(self, y_meas, theta):\n",
-    "#         \"\"\"\n",
-    "#         Calculate exact log-density of measurement variables at times `t=0:T`.\n",
-    "#         \"\"\"\n",
-    "#         mu_tilde = theta[0] * self._dt\n",
-    "#         sigma2_tilde = theta[1] * theta[1] * self._dt\n",
-    "#         tau2 = theta[2] * theta[2]\n",
-    "#         n_obs = y_meas.shape[0]  # number of observations\n",
-    "#         t_meas = jnp.arange(n_obs)\n",
-    "#         mu_y = mu_tilde * t_meas  # mean of y_meas\n",
-    "#         # variance of y_meas\n",
-    "#         Sigma_y = sigma2_tilde * \\\n",
-    "#             jax.vmap(lambda t: jnp.minimum(t, t_meas))(t_meas)\n",
-    "#         Sigma_y = Sigma_y + sigma2_tilde\n",
-    "#         Sigma_y = Sigma_y + tau2 * jnp.eye(n_obs)\n",
-    "#         return jsp.stats.multivariate_normal.logpdf(\n",
-    "#             x=y_meas, mean=mu_y, cov=Sigma_y\n",
-    "#         )\n",
     "    \n",
     "    def pf_init(self, key, y_init, theta):\n",
     "        r\"\"\"\n",
@@ -747,10 +673,6 @@
     "        A = 1/(2.0 * theta[2] * theta[2]) + 1/(2.0 * theta[1] * theta[1] * self._dt)\n",
     "        B = y_init / (theta[2] * theta[2])\n",
     "        x_init = B/(2.0 * A) + jnp.sqrt(1/(2.0 * A)) * jax.random.normal(key=key)\n",
-    "#         logw = jsp.stats.norm.logpdf(y_init, loc=x_init, scale=theta[2]) \n",
-    "#         logw += jsp.stats.norm.logpdf(x_init, loc=0.0, scale=theta[1] * jnp.sqrt(self._dt))\n",
-    "#         logw -= jsp.stats.norm.logpdf(x_init, loc=B/(2.0*A), scale=jnp.sqrt(1/(2.0 * A)))\n",
-    "        # equivalently p(y_init | theta)\n",
     "        logw = jsp.stats.norm.logpdf(y_init, loc = 0, \n",
     "                                     scale = jnp.sqrt((theta[1]*theta[1]*self._dt + theta[2]*theta[2])))\n",
     "        return x_init, logw\n",
@@ -778,11 +700,6 @@
     "        A = 1/(2.0 * theta[2] * theta[2]) + 1/(2.0 * theta[1] * theta[1] * self._dt)\n",
     "        B = y_curr / (theta[2] * theta[2]) + (x_prev + theta[0] * self._dt) / (theta[1] * theta[1] * self._dt)\n",
     "        x_curr = B/(2.0 * A) + jnp.sqrt(1/(2.0 * A)) * jax.random.normal(key = key) \n",
-    "#         logw = jsp.stats.norm.logpdf(y_curr, loc=x_curr, scale=theta[2])\n",
-    "#         logw += jsp.stats.norm.logpdf(x_curr, loc=x_prev + theta[0] * self._dt, scale=theta[1] * jnp.sqrt(self._dt))\n",
-    "#         lp_prop = jsp.stats.norm.logpdf(x_curr, loc = B/(2.0 * A), scale = jnp.sqrt(1/(2.0 * A)))\n",
-    "#         logw -= lp_prop\n",
-    "        # equivalently p(y_curr | x_prev, theta)\n",
     "        mu_tilde = theta[0] * self._dt\n",
     "        sigma2_tilde = theta[1] * theta[1] * self._dt\n",
     "        tau2 = theta[2] * theta[2]\n",
@@ -805,55 +722,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed6d014d",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-12-06T15:09:50.025228Z",
-     "start_time": "2022-12-06T15:09:49.730534Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# # parameter values\n",
-    "# mu = 0.\n",
-    "# sigma = .2\n",
-    "# tau = .1\n",
-    "# theta_true = jnp.array([mu, sigma, tau])\n",
-    "\n",
-    "# # data specification\n",
-    "# # err = 0.0\n",
-    "# dt = .5\n",
-    "# n_obs = 100\n",
-    "# x_init = jnp.array(0.)\n",
-    "\n",
-    "# # initial key for random numbers\n",
-    "# key = jax.random.PRNGKey(0)\n",
-    "\n",
-    "# # simulate data\n",
-    "# bm_model_nbpf1 = BMModel_nBPF1(dt=dt)\n",
-    "# key, subkey = jax.random.split(key)\n",
-    "# y_meas, x_state = pf.simulate(\n",
-    "#     model=bm_model_nbpf1,\n",
-    "#     key=subkey,\n",
-    "#     n_obs=n_obs,\n",
-    "#     x_init=x_init,\n",
-    "#     theta=theta_true\n",
-    "# )\n",
-    "\n",
-    "# # plot data\n",
-    "# plot_df = (pd.DataFrame({\"time\": jnp.arange(n_obs) * dt,\n",
-    "#                          \"x_state\": jnp.squeeze(x_state),\n",
-    "#                          \"y_meas\": jnp.squeeze(y_meas)})\n",
-    "#            .melt(id_vars=\"time\", var_name=\"type\"))\n",
-    "# sns.relplot(\n",
-    "#     data=plot_df, kind=\"line\",\n",
-    "#     x=\"time\", y=\"value\", hue=\"type\"\n",
-    "# )"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ca9a8fad",
    "metadata": {},
@@ -865,12 +733,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "99475a82",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T16:09:16.561364Z",
-     "start_time": "2022-12-09T16:09:13.391745Z"
+     "end_time": "2022-12-09T16:13:30.181672Z",
+     "start_time": "2022-12-09T16:13:27.008127Z"
     }
    },
    "outputs": [
@@ -988,7 +856,9 @@
     "\n",
     "- The two different customized BM models with non-Bootstrap PF give exactly the same result.\n",
     "\n",
-    "- The ideal proposal gives better result than the default Bootstrap proposal. "
+    "- The ideal proposal gives better result than the default Bootstrap proposal. \n",
+    "\n",
+    "- **pfjax** provides great flexibility in terms of defining your customized model. If you fully understand what functions are needed in your model class, you can streamline your code to a greater extent."
    ]
   },
   {
