moved quarto documentation to docs/quarto

--- a/docs/quarto/_latex_macros.qmd
+++ b/docs/quarto/_latex_macros.qmd
@@ -69,4 +69,4 @@
 \newcommand{\Ell}{\mathcal{L}}
 \newcommand{\pot}{\mathcal{U}}
 \renewcommand{\vec}{\operatorname{vec}}
-\newcommand{\cov}{\operatorname{cov}}
+# \newcommand{\cov}{\operatorname{cov}}
