--- a/docs/quarto/stochopt_tutorial.qmd
+++ b/docs/quarto/stochopt_tutorial.qmd
@@ -105,7 +105,7 @@ sns.relplot(
 
 The first step to performing simulated maximum likelihood estimation with **PFJAX** is to estimate the MLE $\hat \tth = \argmax_{\tth} \ell(\tth)$.  To do this, we perform stochastic optimization of the particle filter objective function $\hat{\ell}(\tth)$, for which we'll need to approximate the score function $\nabla \ell(\tth) = \frac{\partial}{\partial \tth} \ell(\tth)$.
 
-A straightforward approximation would be to use **JAX** to directly differentiate the particle filter approximation $\hat{\ell}(\tth)$.  However, this turns out to be biased [@corenflos.etal21], in that in general $E[\frac{\partial}{\partial \tth} \hat{\ell}(\tth)] \neq \frac{\partial}{\partial \tth} \ell(\tth)$.  The [Gradient Comparisons](gradient_comparisons.ipynb) notebook compares the speed and accuracy of several stochastic approximations to the score function.  The recommended algorithm [@poyiadjis.etal11] is implemented in `pfjax.particle_filter_rb()`.  Note that this algorithm scales quadratically in the number of particles, whereas scaling is only linear with the basic particle filter `pfjax.particle_filter()`.  However, the quadratic algorithm requires far fewer particles for comparable (but superior) accuracy and speed.
+A straightforward approximation would be to use **JAX** to directly differentiate the particle filter approximation $\hat{\ell}(\tth)$.  However, this turns out to be biased [@corenflos.etal21], in that in general $E[\frac{\partial}{\partial \tth} \hat{\ell}(\tth)] \neq \frac{\partial}{\partial \tth} \ell(\tth)$.  The [Gradient Comparisons](gradient_comparisons.qmd) notebook compares the speed and accuracy of several stochastic approximations to the score function.  The recommended algorithm [@poyiadjis.etal11] is implemented in `pfjax.particle_filter_rb()`.  Note that this algorithm scales quadratically in the number of particles, whereas scaling is only linear with the basic particle filter `pfjax.particle_filter()`.  However, the quadratic algorithm requires far fewer particles for comparable (but superior) accuracy and speed.
 
 
 We'll use the **Optax** package for gradient-based stochastic optimization in the code below.  First we write a simple wrapper function to stochastically maximize **PFJAX** state-space models.
