updated quarto webpage layout

--- a/docs/quarto/_latex_macros.qmd
+++ b/docs/quarto/_latex_macros.qmd
@@ -2,10 +2,10 @@
 \newcommand{\ud}{\mathop{}\!{\mathrm{d}}}
 \newcommand{\iid}{\stackrel {\mathrm{iid}}{\sim}}
 \newcommand{\ind}{\stackrel {\mathrm{ind}}{\sim}}
-# \newcommand{\thickhline}{%
-#     \noalign {\ifnum 0=`}\fi \hrule height 1pt
-#     \futurelet \reserved@a \@xhline
-# }
+<!-- \newcommand{\thickhline}{% -->
+<!--     \noalign {\ifnum 0=`}\fi \hrule height 1pt -->
+<!--     \futurelet \reserved@a \@xhline -->
+<!-- } -->
 \newcommand{\del}[2][]{\frac{\partial^{#1}}{\partial {#2}^{#1}}}
 \newcommand{\der}[2][]{\frac{\textnormal{d}^{#1}}{\textnormal{d} {#2}^{#1}}}
 \newcommand{\fdel}[3][]{\frac{\partial^{#1}#3}{\partial{#2}^{#1}}}
@@ -69,4 +69,3 @@
 \newcommand{\Ell}{\mathcal{L}}
 \newcommand{\pot}{\mathcal{U}}
 \renewcommand{\vec}{\operatorname{vec}}
-# \newcommand{\cov}{\operatorname{cov}}
